<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Hamp</string>
    <!--COMMON-->
    <string name="start">Empieza</string>
    <string name="cancel">Cancela</string>
    <string name="enter">Entra</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="phone">Teléfono</string>
    <string name="bday">Fecha de nacimiento</string>
    <string name="add_user_card">Añadir tarjeta</string>
    <!--PLACEHOLDERS -->
    <string name="date_format">%s/%s/%d</string>
    <!-- ERRORS -->
    <string name="generic_error">Se ha producido un error inesperado. Por favor, vuelve a intentarlo mas tarde.</string>
    <string name="internet_connection_error">No hay conexión a internet</string>
    <!-- FORM ERRORS -->
    <string name="error_password_length">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_confirm_password">Las contraseñas no coinciden</string>
    <string name="error_birthday_empty">Fecha de nacimiento invalida</string>
    <string name="error_phone_empty">Número de teléfono no válido</string>
    <string name="error_email_empty">Email no válido</string>
    <string name="error_name_empty">Por favor introduce tu nombre</string>
    <string name="error_surname_empty">Por favor introduce tu apellido</string>
    <!--TUTORIAL ACTIVTY-->
    <string name="tutorial_item_title">Escoge el servicio</string>
    <string name="tutorial_item_info">Para disfrutar de las ventajas de Hamp empieza por registrarte en la app. De lo demás, nos encargamos nosotros!</string>
    <!--START ACTIVTY-->
    <string name="main_start_text">Haz la colada más\nfácil que nunca.</string>
    <string name="already_have_account">¿Ya tienes cuenta?</string>
    <string name="start_login">Iniciar sesión</string>
    <!-- SIGN UP ACTIVITY-->
    <string name="sign_up">Registrate</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="email_already_exist">El email introducido ya se esta utilizando</string>
    <!-- LOGIN ACTIVITY-->
    <string name="login">Inicia sesión</string>
    <string name="remember_password">Recuerda la contraseña</string>
    <!-- RESTORE ACTIVITY-->
    <string name="restore_password">Restablece contraseña</string>
    <string name="recover_hamp_password">Recupera tu contraseña de Hamp</string>
    <string name="recover_main">Ingresa tu correo electrónico y recibirás una contraseña provisional por e-mail, que podrás cambiar.</string>
    <string name="send">Envía</string>
    <!-- PAYMENT INFO ACTIVITY-->
    <string name="card_xxx">xxxx xxxx xxxx xxxx</string>
    <string name="card_mm_aa">MM/AA</string>
    <string name="card_cvv">CVV</string>
    <string name="card_cardholder">Nombre del titular</string>
    <string name="card_skip">Más tarde</string>
    <string name="card_continue">Continua</string>
    <!--SERVICE FRAGMENT-->
    <string name="services">Servicios</string>
    <string name="little_bag">Bolsa pequeña</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <!--SERVICE DETAIL ACTIVITY-->
    <string name="description">Descripción</string>
    <string name="price">€</string>
    <!--HISTORY FRAGMENT-->
    <string name="history">Historial</string>
    <!--PROFILE FRAGMENT-->
    <string name="profile_edit">Edita</string>
    <string name="profile_save">Guarda</string>
    <string name="profile">Perfil</string>
    <string name="rate_hamp">Valorar Hamp</string>
    <string name="notifications_enabled">Notificaciones activadas</string>
    <string name="logout">Cerrar sesión</string>
    <string name="terms_of_use">Ver condiciones de uso</string>
    <!--BASKET ACTIVITY-->
    <string name="basket">Cesta</string>
    <string name="total">TOTAL:</string>
    <!--PAYMENT METHOD ACTIVITY-->
    <string name="payment_method">Método de pago</string>
    <string name="finalize_purchase">Finalizar compra</string>

</resources>

