<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/five_bag_icon" />

            <TextView
                android:id="@+id/name"
                style="@style/HelveticaNeueMedium14.Wenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="9dp"
                android:text="@string/little_bag" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/minus"
                    style="@style/HelveticaNeueBold40.CandyPink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/quantity"
                    style="@style/Fredoka26.Wenge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center"
                    android:text="0" />

                <TextView
                    android:id="@+id/plus"
                    style="@style/HelveticaNeueBold40.CandyPink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>