<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.hamp.mvvm.restore.RestoreActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVerticalBottomLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVerticalBottomRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <View
        android:id="@+id/restoreToolbar"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/restorePassword"
        style="@style/HelveticaNeueBold16.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore_password"
        app:layout_constraintBottom_toBottomOf="@id/restoreToolbar"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
        app:layout_constraintTop_toTopOf="@id/restoreToolbar"/>

    <TextView
        android:id="@+id/cancel"
        style="@style/HelveticaNeueRegular13.Razzmatazz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/cancel_top_bottom_padding"
        android:paddingEnd="@dimen/signup_login_cancel_padding_right"
        android:paddingTop="@dimen/cancel_top_bottom_padding"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/restoreToolbar"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@id/restoreToolbar" />

    <View
        android:id="@+id/restoreToolbarDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/hamp_underline_size"
        android:background="@color/razzmatazz"
        app:layout_constraintTop_toBottomOf="@+id/restoreToolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/recoverHampPassword"
        style="@style/HelveticaNeueRegular20.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_title_margin_top"
        android:text="@string/recover_hamp_password"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalRight"
        app:layout_constraintTop_toBottomOf="@+id/restoreToolbarDivider" />

    <TextView
        android:id="@+id/recoverMain"
        style="@style/HelveticaNeueLight14.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_main_margin_top"
        android:text="@string/recover_main"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalRight"
        app:layout_constraintTop_toBottomOf="@+id/recoverHampPassword" />

    <com.hamp.mvvm.views.HampEditText
        android:id="@+id/recoverEmail"
        style="@style/HelveticaNeueMedium20.Razzmatazz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_recovery_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:tag="@string/email"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalRight"
        app:layout_constraintTop_toBottomOf="@+id/recoverMain" />

    <TextView
        android:id="@+id/sendButton"
        style="@style/HelveticaNeueBold16.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/signup_recovery_button_bottom_margin"
        android:layout_marginTop="@dimen/start_button_top_margin"
        android:background="@drawable/hamp_default_button"
        android:paddingBottom="@dimen/hamp_button_padding_top_bottom"
        android:paddingTop="@dimen/hamp_button_padding_top_bottom"
        android:text="@string/send"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalBottomLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalBottomRight" />

</android.support.constraint.ConstraintLayout>
