<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.hamp.mvvm.paymentInfo.PaymentInfoActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <TextView
        android:id="@+id/addCardText"
        style="@style/HelveticaNeueBold36.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add_card"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical08"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical08"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical92"
        app:layout_constraintTop_toBottomOf="@+id/addCardText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="14dp">

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/cardNumber"
                style="@style/HelveticaNeueLight14.Razzmatazz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/visa"
                android:drawablePadding="24dp"
                android:drawableStart="@drawable/visa"
                android:ems="10"
                android:hint="@string/card_xxx"
                android:inputType="number"
                android:maxLength="19"
                android:nextFocusDown="@+id/cardExpiryDate"
                app:mask="#### #### #### ####" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="12dp"
                android:background="@color/manatee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/cardExpiryDate"
                    style="@style/HelveticaNeueLight14.Razzmatazz"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/card_mm_aa"
                    android:inputType="number"
                    android:maxLength="5"
                    android:nextFocusDown="@+id/cardCvv"
                    app:mask="##/##" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="43dp"
                    android:background="@color/manatee" />

                <EditText
                    android:id="@+id/cardCvv"
                    style="@style/HelveticaNeueLight14.Razzmatazz"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/card_cvv"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusDown="@+id/cardholder" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="3dp"
                android:background="@color/manatee" />

            <EditText
                android:id="@+id/cardHolder"
                style="@style/HelveticaNeueLight14.Razzmatazz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/card_cardholder"
                android:inputType="textPersonName" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/skipContinueButton"
        style="@style/HelveticaNeueBold16.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/hamp_default_button"
        android:paddingBottom="@dimen/skip_continue_padding_top_bottom"
        android:paddingTop="@dimen/skip_continue_padding_top_bottom"
        android:text="@string/card_skip"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical08"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical92" />

</android.support.constraint.ConstraintLayout>
